style.css
 {
     border: 1px solid lime;
 }

 body {
     background: linear-gradient(-35deg, #e5d52d, #e13be7);
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
 }

 button {
     margin: 10px;
     width: 50px;
 }

 .artContainer {
     display: flex;
     justify-content: center;
     width: 100%;
 }

 .uiContainer {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     margin-right: 50px;
     width: 100px;
 }

 .canvas {
     display: flex;
     flex-wrap: wrap;
     margin: 15px;
     box-shadow: 10px 5px 5px black;
     cursor: crosshair;
 }

 .pixel {
     background-color: white;
     box-sizing: border-box;
 }

 .colors, .rainbow, .eraser, .clear {
     border: 1px solid black;
     background-color: transparent;
     width: 100%;
     height: 25px;
     border-radius: 3px;
 }
.colors:hover {
    transform: scale(104%);
}

 .rainbow:hover {
    transform: scale(104%);
 }

 .eraser:hover {
    transform: scale(104%);
 }

 .clear:hover {
    transform: scale(104%);
 }

 #colorInput {
     width: 100px;
     height: 100px;
     border-radius: 3px;
     border: none;
     background-color: transparent;
 }
 #colorInput:hover {
    transform: scale(101%);
 }

.selected {
    background-color: rgba(255,255,255,0.5);
}



 background: linear-gradient(-35deg, #d4b31e, #c208c8);
 background: linear-gradient(-35deg, #e77307, #26c4a5);
 background: linear-gradient(-35deg, #ed5634, #45b833);

 

